Added click and drag functionality

--- a/src/sierpinski.html
+++ b/src/sierpinski.html
@@ -10,6 +10,12 @@
     <div id="fractalBlock" class="canvas-container">
         <canvas id="fractalCanvas"></canvas>
     </div>
-  <script src="js/triangle.js"></script>
+    <span id="valueDisplay" class="value-display">
+      <p id="scrollValue"></p>
+      <p id="draggingValue"></p>
+      <p id="viewXValue"></p>
+      <p id="viewYValue"></p>
+    </span>
+  <script src="js/sierpinski.js"></script>
 </body>
 </html>
