--- a/src/sierpinski.html
+++ b/src/sierpinski.html
@@ -15,6 +15,8 @@
       <p id="draggingValue"></p>
       <p id="viewXValue"></p>
       <p id="viewYValue"></p>
+      <p id="relativeX"></p>
+      <p id="relativeY"></p>
     </span>
   <script src="js/sierpinski.js"></script>
 </body>
