--- a/html/sierpinski.html
+++ b/html/sierpinski.html
@@ -1,23 +1,24 @@
 <!doctype html>
-
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Sierpinski</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <title>Sierpinski</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div id="fractalBlock" class="canvas-container">
-        <canvas id="fractalCanvas"></canvas>
+    <div id="site-wrapper">
+        <div class="canvas-container">
+            <canvas id="fractalCanvas"></canvas>
+        </div>
+        <span id="valueDisplay" class="value-display">
+            <p id="scrollValue"></p>
+            <p id="draggingValue"></p>
+            <p id="viewXValue"></p>
+            <p id="viewYValue"></p>
+            <p id="relativeX"></p>
+            <p id="relativeY"></p>
+        </span>
     </div>
-    <span id="valueDisplay" class="value-display">
-      <p id="scrollValue"></p>
-      <p id="draggingValue"></p>
-      <p id="viewXValue"></p>
-      <p id="viewYValue"></p>
-      <p id="relativeX"></p>
-      <p id="relativeY"></p>
-    </span>
-  <script src="js/sierpinski.js"></script>
+    <script src="./js/sierpinski.js"></script>
 </body>
 </html>
