--- a/html/sierpinski.html
+++ b/html/sierpinski.html
@@ -34,15 +34,22 @@
                     <input type="radio" name="render" value="4">
                     4x
                 </label>
+                <label>
+                    <input type="radio" name="render" value="8">
+                    8x
+                </label>
             </div>
             <div id="iterations">
                 <label>
                     Iterations:
-                    <input type="number" name="iteration-count" min="1" max="10" value="7">
+                    <input type="number" name="iteration-count" min="1" max="11" value="7">
                 </label>
             </div>
+            <div id="iteration-delay">
+                <label>Iteration Delay: 1000ms</label>
+            </div>
             <div id="submit">
-                <button>Go</button>
+                <button>Go!</button>
             </div>
         </div>
     </div>
